# VertiFlow

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  seed_demo.py
backend/: .env.example  check_db.py  requirements.txt
backend/app/: main.py  test_alerts.py
backend/app/core/: config.py
backend/app/db/: database.py  queries.py  timescale.py
backend/app/models/: __init__.py  actions_log_model.py  schemas.py
backend/app/routers/: analytics.py  config.py  controls.py  ingest.py  telemetry.py
backend/app/services/: alert_engine.py  rule_engine.py
docs/: development.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
frontend/src/: App.tsx  auth.ts  index.css  vite-env.d.ts
frontend/src/api/: auth.ts  client.ts  config.ts
frontend/src/config/: zones.ts
frontend/src/context/: AuthContext.tsx  SettingsContext.tsx  ZoneContext.tsx
frontend/src/data/: cycles.ts
frontend/src/hooks/: useAlerts.ts  useAnalytics.ts  useAutomationLogs.ts  useControlHistory.ts  useControls.ts  useDashboardLogic.ts  useTelemetry.ts  useWebSocket.ts
frontend/src/types/: analytics.ts  farm.ts  r3f.d.ts  telemetry.ts
src/vertiflow/: .env.example  check_db.py  cli.py  main.py  test_alerts.py
src/vertiflow/core/: config.py  dependencies.py  mock_data.py
src/vertiflow/db/: auth_queries.py  (+2 more)
supabase/: config.toml  schema.sql
supabase/migrations/: 20260518_multitenant_auth.sql  20260518_remove_browser_id.sql  20260519_supabase_auth_rebuild.sql
(+50 files in other folders)
