[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vertiflow"
version = "0.1.0"
description = "Smart Vertical Farm Management Platform"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    {name = "VertiFlow Team"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "gunicorn>=21.2.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vertiflow"]
